app/assets/stylesheets/api/feed.css
.feed {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 1000px;
  margin: 0 auto;
  margin-top: 200px;
  font-family: 'Titillium Web';
  zoom: 0.83;
}

.feed-row {
  display: flex;
  flex-direction: row;
  margin-bottom: 60px;
}

.splashStory {
  display: flex;
  margin-bottom: 50px;
}

.splash .feedItem {
  display: flex;
  width: 890px;
  height: 490px;
}

.splash .storyInfo {
  position: absolute;
  width: 830px;
  height: 430px;
  padding: 30px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  z-index: 100;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  visibility: hidden;
}

.splash .feedItem .imageContainer {
  display: flex;
  z-index: 90;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right:auto;
  width: 890px;
  height: 490px;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.19);
}

.splash .feedItem img {
  width: 900px;
}

.splash .description h2 {
  font-size: 32px;
  font-weight: 100;
  font-family: 'PT Sans';
  color: white;
  max-width: 500px;
}

.splash .description span {
  display: block;
  margin-top: 10px;
  font-size: 28px;
  font-weight: normal;
  color: white;
  max-width: 500px;
}

.splash .feedItem .author {
  font-size: 28px;
  text-align: right;
}

.splash .author .date {
  display: inline;
  width: 174px;
  margin-top: 7px;
  color: white;
  margin-left: auto;
}

.group-of-two .feedItem {
  display: flex;
  width: 667px;
  height: 367px;
}

.group-of-two .storyInfo {
  position: absolute;
  width: 607px;
  height: 307px;
  padding: 30px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  z-index: 100;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  visibility: hidden;
}

.group-of-two .feedItem .imageContainer {
  display: flex;
  z-index: 90;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right:auto;
  width: 667px;
  height: 367px;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.19);
}

.group-of-two .feedItem img {
  width: 900px;
}

.group-of-two .description h2 {
  font-size: 28px;
  font-weight: 100;
  font-family: 'PT Sans';
  color: white;
  max-width: 400px;
}

.group-of-two .description span {
  display: block;
  margin-top: 10px;
  font-size: 24px;
  font-weight: normal;
  color: white;
  max-width: 470px;
}

.group-of-two .feedItem .author {
  font-size: 24px;
  text-align: right;
}

.group-of-two .author .date {
  display: inline;
  width: 174px;
  margin-top: 7px;
  color: white;
  margin-left: auto;
}

.feedItem {
  display: flex;
  width: 445px;
  height: 245px;
}

@keyframes fadeInFromBottom {
  0% { transform: translateY(50px); opacity: 0 }
  100% { transform: translateY(0); opacity: 1 }
}

.storyInfo {
  position: absolute;
  width: 405px;
  height: 205px;
  padding: 20px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  z-index: 100;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  visibility: hidden;
}

.feedItem:hover .storyInfo {
  visibility: visible;
  cursor: pointer;
}

.feedItem .imageContainer {
  display: flex;
  z-index: 90;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right:auto;
  width: 445px;
  height: 245px;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.19);
}

.feedItem img {
  width: 450px;
}

.imageContainer .storyPreview {
  padding: 20px;
  font-family: Georgia, 'PT Serif', serif;
  font-size: 22px;
  font-weight: normal;
  color: #333;
  background-color: #eee;
  width: 100%
}

.storyPreview:first-child:first-letter {
  float: left;
  font-size: 80px;
  line-height: 60px;
  padding-top: 6px;
  padding-right: 4px;
  padding-left: 0px;
  padding-bottom: 0px;
}

.description h2 {
  font-size: 22px;
  font-weight: 100;
  font-family: 'PT Sans';
  color: white;
  max-width: 290px;
}

.description span {
  display: block;
  margin-top: 10px;
  font-size: 20px;
  font-weight: normal;
  color: white;
  max-width: 250px;
}

.feedItem .author {
  font-size: 18px;
  text-align: right;
}

.author .date {
  display: inline;
  width: 87px;
  margin-top: 7px;
  color: white;
  margin-left: auto;
}

.feed-footer {
  margin-top: 50px;
  border-top: 1px solid #ddd;
  width: 100%;
  display: flex;
  justify-content: space-around;
}

.footer-link {
  margin-top: 15px;
  margin-bottom: 30px;
  font-weight: normal;
  font-size: 18px;
  font-family: "PT Sans";
  color: #aaa;
}

.footer-link:hover {
  color: #777;
  cursor: pointer;
}

